--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'ua.kpi.uinet'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '1.9'
 
 configurations {
 	compileOnly {
@@ -19,10 +19,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.tensorflow:tensorflow:1.15.0'
+	implementation 'org.openpnp:opencv:4.5.1-2'
 	compileOnly 'org.projectlombok:lombok'
-	implementation 'org.opencv:opencv-java:3.2.0'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
